--- a/.travis.yml
+++ b/.travis.yml
@@ -11,14 +11,15 @@ before_install:
   - pip install -r "requirements.txt"
   - pip install flake8
   - pip install coveralls
+  - export PYTHONPATH=$PYTHONPATH:$(pwd)
 
 install:
   - pip install .
 
 script:
   - flake8 .
-  - cd implementations/tests_df
-  - coverage run --source=code_df run_tests.py
+  - cd implementations/tests
+  - coverage run --source=../code_df,../scripts run_tests.py
 
 after_success:
   - coveralls
