Improve tests and .coveragerc
This patch improves tests and the coverage
report excluded lines section. 
 
Signed-off-by: Aniruddha Karajgi <akarajgi0@gmail.com>

--- a/implementations/tests/.coveragerc
+++ b/implementations/tests/.coveragerc
@@ -1,7 +1,6 @@
 [report]
-# Regexes for lines to exclude from consideration
-exclude_lines =
 
-    # Don't complain if non-runnable code isn't run:
+exclude_lines =
+	raise NotImplementedError
     if 0:
     if __name__ == .__main__.:
