--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,7 @@ install:
 
 script:
   - flake8 .
-  - cd implementations/tests_df
-  - coverage run --source=code_df run_tests.py
+  - coverage run --source=code_df ./implementations/tests_df/run_tests.py
 
 after_success:
   - coveralls
